Replaced a lot of Errors to be Logged instead of being stack tracked, also fixed a bug where description of the argument was not being appended, added a required argument parameter and a not null parameter, improved system prompt